<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_statistic">

    <fragment
        android:id="@+id/navigation_statistic"
        android:name="com.example.joshu.ui.mainScreen.statistic.StatisticScreenFragmentImpl"
        android:label="@string/statistic"
        tools:layout="@layout/fragment_statistic_screen" />

    <fragment
        android:id="@+id/navigation_calendar"
        android:name="com.example.joshu.ui.mainScreen.calendar.CalendarScreenFragmentImpl"
        android:label="@string/calendar"
        tools:layout="@layout/fragment_calendar_screen" />

    <fragment
        android:id="@+id/navigation_list"
        android:name="com.example.joshu.ui.mainScreen.list.ListScreenFragmentImpl"
        android:label="@string/list"
        tools:layout="@layout/fragment_list_screen" />

    <fragment
        android:id="@+id/folder_screen"
        android:name="com.example.joshu.ui.mainScreen.list.folder.FolderScreenFragmentImpl"
        android:label="@string/list"
        tools:layout="@layout/fragment_folder_screen" />

    <fragment
        android:id="@+id/navigation_today"
        android:name="com.example.joshu.ui.mainScreen.today.TodayScreenFragmentImpl"
        android:label="@string/today"
        tools:layout="@layout/fragment_today_screen" />
</navigation>